fixed bug where page would jump

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,11 @@ body{
   overflow-x: hidden;
 }
 
+.landing-text-content{
+  overflow-x: hidden;
+}
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
